--- a/project_blog.html
+++ b/project_blog.html
@@ -3,6 +3,7 @@
 <html lang="fr">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, user-scalable=no">
 	<title>Houmahani Kane - Projet Blog</title>
 	
 	<!-- Fonts -->
