Projects buttons disabled

--- a/project_portfolio.html
+++ b/project_portfolio.html
@@ -81,7 +81,7 @@
       <section>
         <h2>Le projet</h2>
         <p>J'ai developpé mon propre portfolio en HTML5, CSS3 et jQuery pour mettre en avant les projets que j'ai réalisé pendant ma formation à la 3WA, mais aussi mes futurs projets. C'est l'occasion d'appliquer tout ce que j'ai appris lors de la formation !</p>	
-        <button class="see_project">Tester le projet</button>
+<!--        <button class="see_project">Tester le projet</button>-->
       </section>
       
       <!-- Project Features -->
@@ -134,7 +134,7 @@
             <p>Pour l'affichage du site en mobile, j'utilise les <em>media queries</em>. Je supprime le cadre blanc, les surplus visuels et optimise les images.</p>
           </div>
         </article>
-        <button class="see_project">Tester le projet</button>
+<!--        <button class="see_project">Tester le projet</button>-->
       </section>
 
       <section class="next_project next_restaurant">
