--- a/project_restaurant.html
+++ b/project_restaurant.html
@@ -81,7 +81,7 @@
       <section>
         <h2>Le projet</h2>
         <p>Pendant la formation à la 3W Academy, nous avons réalisé un site restaurant e-commerce sous PHP, jQuery, Ajax et avec le framework de l'organisme de formation. Objectif : L'utilisateur peut créer un compte, se connecter, passer une commande et/ou réserver une table. L'admin peut ajouter, supprimer ou modifier des produits de la carte.</p>	
-        <button class="see_project">Tester le projet</button>
+<!--        <button class="see_project">Tester le projet</button>-->
       </section>
       
       <!-- Project Features -->
@@ -123,7 +123,7 @@
             <p>Nous avons créer un panneau d'aministration pour permettre l'ajout, la suppression ou la modification des produits de la carte.</p>
           </div>
         </article>
-        <button class="see_project">Tester le projet</button>
+<!--        <button class="see_project">Tester le projet</button>-->
       </section>
 
       <section class="next_project next_blog">
