--- a/project_blog.html
+++ b/project_blog.html
@@ -81,7 +81,7 @@
       <section>
         <h2>Le projet</h2>
         <p>Développement d'un blog en PHP avec l'utilisation du PDO pour se connecter à la base de donnée mySQL. Pour la mise en forme, j'ai utilisé HTML5 et CSS3.</p>	
-        <button class="see_project">Tester le projet</button>
+<!--        <button class="see_project">Tester le projet</button>-->
       </section>
       
       <!-- Project Features -->
@@ -123,7 +123,7 @@
             <p>Dans la partie Administration du site, l'admin peut rédiger un nouvel article, modifier ou supprimer les articles existants.</p>
           </div>
         </article>
-        <button class="see_project">Tester le projet</button>
+<!--        <button class="see_project">Tester le projet</button>-->
       </section>
      
       <section class="next_project next_portfolio">
