Correction de l'orthographe

--- a/about.html
+++ b/about.html
@@ -115,7 +115,7 @@
 			<article class="skills">
 				<h2>Compétences</h2>
 				<p>J'ai acquis des compétences en développement web et en webmarketing lors de ma formation à la 3W Academy et lors de mon année en licence E-Commerce et Marketing Numérique.</p>
-				<p>Passionnée par le graphisme, je maitrise aussi Adobe Photoshop, Illustrator, After Effects et Premiere pro pour la création de visuels et montages vidéos</p>
+				<p>Passionnée par le graphisme, je maîtrise aussi <em>Adobe Photoshop</em>, <em>Illustrator</em>, <em>After Effects</em> et <em>Premiere Pro</em> pour la création de visuels et montages vidéos.</p>
 				
 				<!-- Skills Columns -->
 				<div class="skills_column flex">
