--- a/project_portfolio.html
+++ b/project_portfolio.html
@@ -80,7 +80,7 @@
       <!-- Project Brief -->
       <section>
         <h2>Le projet</h2>
-        <p>J'ai developpé mon propre portfolio en HTML5, CSS3 et jQuery pour mettre en avant les projets que j'ai réalisé pendant ma formation à la 3WA, mais aussi mes futurs projets. C'est l'occasion d'appliquer tout ce que j'ai appris lors de la formation !</p>	
+        <p>J'ai développé mon propre portfolio en HTML5, CSS3 et jQuery pour mettre en avant les projets que j'ai réalisé pendant ma formation à la 3WA, mais aussi mes futurs projets. C'est l'occasion d'appliquer tout ce que j'ai appris lors de la formation !</p>	
 <!--        <button class="see_project">Tester le projet</button>-->
       </section>
       
@@ -131,7 +131,7 @@
           
           <div class="details_content">
             <h3>Optimisé pour le mobile</h3>
-            <p>Pour l'affichage du site en mobile, j'utilise les <em>media queries</em>. Je supprime le cadre blanc, les surplus visuels et optimise les images.</p>
+            <p>Le portfolio est réalisé en <em>Mobile First</em>. Pour l'optimisation, j'utilise les <em>media queries</em>. Il n'existe pas de cadre blanc ni de surplus visuels.</p>
           </div>
         </article>
 <!--        <button class="see_project">Tester le projet</button>-->
