--- a/project_restaurant.html
+++ b/project_restaurant.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 
-  <header id="header_page" class="header_restaurant transition transition_fadeinup">
+  <header id="header_page" class="header_restaurant transition">
     <nav class="mobile_nav_back">
       <a href="projects.html"><p class="nav to_projects"><i class="fas fa-long-arrow-alt-left"></i> Retour</p></a>
     </nav>
