--- a/project_portfolio.html
+++ b/project_portfolio.html
@@ -62,7 +62,7 @@
 
           <div class="duration">
             <span>Durée</span>
-            <p>En 8 jours lors de la formation à la 3W Academy</p>
+            <p>En 4 jours</p>
           </div>
       </div>
     </div>
